--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "src/assets/js/header.js"
+              "src/assets/js/header.js",
+              "src/assets/js/upload.js"
             ]
           },
           "configurations": {
@@ -176,6 +177,7 @@
           }
         }
       }
+
     }
   },
   "defaultProject": "transfer",
